// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Component should render correctly when no company is searched 1`] = `
.emotion-1 {
  height: 100%;
  width: 100%;
  background: transparent;
  border: transparent;
  color: white;
  font-size: 1.9rem;
  font-weight: 100;
  outline: transparent;
}

.emotion-2 {
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 0.7rem 0;
}

.emotion-0 {
  padding: 0.4rem 1rem 0.4rem 0;
}

.emotion-3 {
  list-style-type: none;
  padding-left: 0;
  z-index: 1;
  position: absolute;
  width: calc(100% - 2 * 1.5rem);
}

<div>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-0"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 fa-lg "
        data-icon="search"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
    <input
      className="emotion-1"
      onChange={[Function]}
      type="text"
      value="Apple Inc. (AAPL)"
    />
  </div>
  <ul
    className="emotion-3"
  />
</div>
`;

exports[`Search Component should render correctly with search results 1`] = `
.emotion-1 {
  height: 100%;
  width: 100%;
  background: transparent;
  border: transparent;
  color: white;
  font-size: 1.9rem;
  font-weight: 100;
  outline: transparent;
}

.emotion-2 {
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 0.7rem 0;
}

.emotion-0 {
  padding: 0.4rem 1rem 0.4rem 0;
}

.emotion-5 {
  list-style-type: none;
  padding-left: 0;
  z-index: 1;
  position: absolute;
  width: calc(100% - 2 * 1.5rem);
}

.emotion-3 {
  outline: none;
  padding: 1.5rem 1rem;
  color: white;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<Search>
  <div>
    <Styled(div)>
      <div
        className="emotion-2"
      >
        <Styled(span)>
          <span
            className="emotion-0"
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="search"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size="lg"
              spin={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search fa-w-16 fa-lg "
                data-icon="search"
                data-prefix="fas"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </span>
        </Styled(span)>
        <input
          className="emotion-1"
          onChange={[Function]}
          type="text"
          value="Apple Inc. (AAPL)"
        />
      </div>
    </Styled(div)>
    <SearchResults
      onClickResult={[Function]}
      results={
        Array [
          Object {
            "name": "Apple Inc",
            "symbol": "aapl",
          },
          Object {
            "name": "Alphabet Inc",
            "symbol": "googl",
          },
        ]
      }
    >
      <Styled(ul)>
        <ul
          className="emotion-5"
        >
          <Component
            company={
              Object {
                "name": "Apple Inc",
                "symbol": "aapl",
              }
            }
            key="aapl"
            onClickResult={[Function]}
          >
            <Styled(li)
              onClick={[Function]}
            >
              <li
                className="emotion-3"
                onClick={[Function]}
              >
                Apple Inc
                 (
                aapl
                )
              </li>
            </Styled(li)>
          </Component>
          <Component
            company={
              Object {
                "name": "Alphabet Inc",
                "symbol": "googl",
              }
            }
            key="googl"
            onClickResult={[Function]}
          >
            <Styled(li)
              onClick={[Function]}
            >
              <li
                className="emotion-3"
                onClick={[Function]}
              >
                Alphabet Inc
                 (
                googl
                )
              </li>
            </Styled(li)>
          </Component>
        </ul>
      </Styled(ul)>
    </SearchResults>
  </div>
</Search>
`;
